--- a/magicMirror/src/App.css
+++ b/magicMirror/src/App.css
@@ -1,40 +1,25 @@
-#root {
-  max-width: 1280px;
-  padding: 2rem;
+.parent {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.parent>* {
+  border: 1px solid white;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.rowOne {
+  text-align: center;
+  display: flex;
+  
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
 }
-
-.card {
-  padding: 2em;
+.rowOne >* {
+  border: 1px solid green;
+  margin: 0;
+  padding: 0;
 }
-
-.read-the-docs {
-  color: #888;
+.rowTwo {
+  display: flex;
 }
